Fix insets on iOS

--- a/src/global.css
+++ b/src/global.css
@@ -101,10 +101,8 @@ body {
   color: var(--color-text);
   font-size: 16px;
   height: 100dvh;
-  /* Use a minimum for top and bottom to work around
-   * https://chromium-review.googlesource.com/c/chromium/src/+/6295663/comments/a5fc2d65_86c53b45 */
-  padding: max(env(safe-area-inset-top), 0) env(safe-area-inset-right)
-    max(env(safe-area-inset-bottom), 0) env(safe-area-inset-left) !important;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left) !important;
   position: relative;
 }
 
